syntax = "proto3";
package academictoken.schedule;

option go_package = "academictoken/x/schedule/types";

message RecommendedSubject {
  
  string subjectId = 1; 
  string recommendationRank = 2; 
  string reason = 3; 
  string isRequired = 4; 
  string semesterAlignment = 5; 
  string difficultyLevel = 6; 
}
