syntax = "proto3";
package academictoken.schedule;

option go_package = "academictoken/x/schedule/types";

import "academictoken/schedule/planned_semester.proto";

message StudyPlan {
  string index = 1; 
  string student = 2; 
  string creationDate = 3; 
  string completionTarget = 4; 
  string additionalNotes = 5; 
  string status = 6;
  repeated PlannedSemester plannedSemesters = 7;
}